--- a/freedb/templates/base.html
+++ b/freedb/templates/base.html
@@ -36,6 +36,11 @@
       </div>
     </li>
   </ul>
+  <ul class="navbar-nav px-3">
+    <li class="nav-item text-nowrap">
+      <a class="nav-link" href="#">Sign out</a>
+    </li>
+  </ul>
 </nav>
 <div class="container-fluid">
   {% block content %}
